focus adjustments and moved styles changed focus indicator on visible title while keeping actual focus on aria-label changed validation style to make it different than the focus outline style moved styles in tempFixes() from adapt-accessibilityFixes to adapt-college-theme fixed links missing underline in some popups

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -489,10 +489,18 @@ abbr[title] {
 }
 
 // COMPONENT LEVEL
-.component .component-instruction-inner.validation-error {
-    color: #a94442;
-    border: 2px solid #a94442;
+
+.component .component-instruction-inner {
     padding: 5px;
+}
+
+.component .component-instruction-inner.validation-error {
+    color: #000000 !important;
+    background: #f3e9e8;
+    border-top: none!important;
+    border-bottom: none!important;
+    border-right: none!important;
+    border-left: 4px solid #d3080c!important;
 }
 
 // Link styles
@@ -544,6 +552,9 @@ abbr[title] {
     .notify-popup-icon-close:hover {
         color:lighten(@esdc-pink,20%) !important;
     }
+    a {
+        text-decoration: underline!important;
+    }
 }
 
 // non interactive box
@@ -562,6 +573,21 @@ button, label, input, .mcq-item input:focus + label {
         outline:3px solid @esdc-pink !important;
     }
 }
+
+//visible focus indicator on all interactive elements
+html *:focus, body div:focus, body p:focus, body button:focus, body label:focus, body input:focus, body *:focus {
+    outline:3px solid #CD1C6A !important;
+}
+
+// visible focus indicator outline on title
+html:not(.a11y-disable-focusoutline) .js-heading-inner:focus {
+    outline: none!important;
+}
+
+html:not(.a11y-disable-focusoutline) .js-heading:focus-within ~ .component-title-inner {
+    outline: 3px solid #CD1C6A !important;
+}
+
 
 // ====================================================================
 //
@@ -712,6 +738,7 @@ video::cue {
 .mcq-widget[role="radiogroup"]:focus-within, .mcq-widget[role="group"]>.mcq-item:focus-within {
     outline: 3px solid @esdc-pink;
 }
+
 
 // secondary focus for radio buttons
 .mcq-component div[role="radiogroup"] {
@@ -909,6 +936,11 @@ button.hotgrid-grid-item .hotgrid-item-title{
             color:#BDFFEB !important; // @esdc-cyan
         }
     }
+}
+
+//margin for submit button - used for Open Text Input fixes
+.button-margin {
+    margin-right:.5%
 }
 
 // ====================================================================
